kubernetes/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: social-ingress
    app.kubernetes.io/version: "1.0"
  name: social-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - '*.social-test.app'
        - 'social-test.app'
      secretName: ingress-tls
  rules:
    - host: social-test.app
      http:
        paths:
          - path: /user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 80
          - path: /feed(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: feed
                port:
                  number: 80
